best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1008,7 +1008,7 @@ C/S架构编程，做完第一章所有的上机题:
 </pre>
 </div>
 
-<details><summary>点击查看答案</summary>
+<details><summary>点击查看答案，仅供参考</summary>
 <p>
 TODO
 </p>
