best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-04 -->
+<!-- 2024-03-06 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -1054,6 +1054,9 @@
 <p>
 进行完善 1) 输出身体状况 2) 循环计算:
 </p>
+
+<details><summary>参考实现</summary>
+
 <div class="org-src-container">
 <pre class="src src-csharp"><span class="linenr"> 1: </span><span style="color: #5317ac;">static</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Main</span><span style="color: #000000;">(</span><span style="color: #005a5f;">string</span><span style="color: #a8007f;">[]</span> <span style="color: #00538b;">args</span><span style="color: #000000;">)</span>
 <span class="linenr"> 2: </span><span style="color: #000000;">{</span>
@@ -1106,13 +1109,15 @@
 <span class="linenr">49: </span><span style="color: #000000;">}</span>
 </pre>
 </div>
+
+</details>
 </div>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-03-04</p>
+<p class="date">Created: 2024-03-06</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
