best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1052,8 +1052,12 @@
 </div>
 
 <p>
-进行完善 1) 输出身体状况 2) 循环计算:
+请对上述代码进行完善
 </p>
+<ol class="org-ol">
+<li>输出身体状况: 偏瘦、正常、偏胖、肥胖等，自行查询相关标准</li>
+<li>循环计算</li>
+</ol>
 
 <details><summary>参考实现</summary>
 
